<resources>
    <string name="app_name">ChatAppMongoDB</string>
    <!-- TODO: Remove or change this placeholder text -->

    <string name="chat">Tin nhắn</string>
    <string name="call">Cuộc gọi</string>
    <string name="contact">Người dùng</string>
    <string name="profile">Hồ sơ</string>
    <string name="feedback">Góp ý với chúng tôi</string>
    <string name="communication">Cộng đồng</string>
    <string name="settingProfile">Cài đặt tài khoản</string>
    <string name="update">Cập nhật</string>
    <string name="share">Chia sẻ</string>
    <string name="logout">Đăng xuất</string>
    <string name="username">Tên người dùng</string>
    <string name="name">Tên</string>
    <string name="status">Trạng thái</string>
    <string name="online">Online</string>
    <string name="offline">Offline</string>
    <string name="email">Email</string>
    <string name="password">Mật khẩu</string>
    <string name="vietNam">Việt Nam</string>
    <string name="country">Quốc gia</string>
    <string name="background">Nền</string>
    <string name="confirmPassword">Xác nhận mật khẩu</string>
    <string name="registerAccount">Đăng Ký Tài Khoản</string>
    <string name="getYourFreeAccoutNow">Đăng ký tài khoản miễn phí ngay bây giờ</string>
    <string name="welcomeBack">Chào mừng trở lại!</string>
    <string name="agreeDootTermsOfUse">Bằng cách đăng ký, bạn đồng ý với Điều khoản sử dụng của chúng tôi</string>
    <string name="signInToCountinue">Đăng nhập để sử dụng ứng dụng</string>
    <string name="signOutOfYourAccount">Đăng xuất khỏi tài khoản của bạn?</string>
    <string name="deleteConversation">Xóa cuộc trò chuyện?</string>
    <string name="haveNoAccount">Chưa có tài khoản?</string>
    <string name="hadAAccount">Đã có tài khoản?</string>
    <string name="introduceMySelf">Giới thiệu bản thân</string>
    <string name="lastMessage">Tin nhắn cuối</string>
    <!--    Action-->
    <string name="enterEmail">Nhập Email</string>
    <string name="enterUserName">Nhập Tên người dùng</string>
    <string name="enterPassword">Nhập Mật khẩu</string>
    <string name="enterPasswordAgain">Nhập lại Mật khẩu</string>
    <string name="enterMessage">Nhập tin nhắn …</string>
    <string name="signUpWith">Đăng ký bằng</string>
    <string name="signInWith">Đăng nhập bằng</string>
    <string name="signUp">Đăng ký ngay</string>
    <string name="signIn">Đăng nhập</string>
    <string name="loginWithGoogle">Đăng nhập bằng Google</string>
    <string name="loginWithFacebook">Đăng nhập bằng Facebook</string>
    <string name="registerWithGoogle">Đăng ký bằng Facebook</string>
    <string name="registerWithFacebook">Đăng ký bằng Facebook</string>
    <string name="rememberPassword">Nhớ mật khẩu</string>
    <string name="hidePassword">Ẩn mật khẩu</string>
    <string name="forgotPassword">Quên mật khẩu?</string>
    <string name="cancel">Hủy</string>
    <string name="delete">Xóa</string>
    <string name="save">Lưu</string>
    <string name="copyrightSign">\u00A9 2023 Chat App \u2764 PTIT</string>
    <string name="updateBackGround">Cập nhật ảnh bìa</string>
    <string name="updateAvatar">Cập nhật ảnh đại diện</string>
    <string name="updateName">Cập nhật tên người dùng</string>
    <string name="back">Quay lại</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="time">Thời gian</string>
    <string name="message">Tin nhắn</string>
    <string name="search">Tìm kiếm</string>
    <string name="sendImage">Gửi hình ảnh</string>
    <string name="sendMessage">Gửi tin nhắn</string>
    <string name="sendImageFromCamera">Gửi hình ảnh từ máy ảnh</string>
    <string name="sendAudio">Gửi ghi âm</string>
    <string name="sendFile">Gửi tệp file</string>
    <string name="sendLocation">Gửi định vị</string>
</resources>