<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">
    <group android:checkableBehavior="single">
        <item
            android:id="@+id/navigationDrawerChat"
            android:icon="@drawable/icon_message"
            android:title="@string/chat" />
        <item
            android:id="@+id/navigationDrawerContact"
            android:icon="@drawable/icon_contact"
            android:title="@string/contact" />
<!--        <item-->
<!--            android:id="@+id/navigationDrawerCall"-->
<!--            android:icon="@drawable/icon_call"-->
<!--            android:title="@string/call" />-->
    </group>
    <item android:title="@string/communication">
        <menu>
            <item
                android:id="@+id/navigationDrawerShare"
                android:icon="@drawable/icon_share"
                android:title="@string/share" />
            <item
                android:id="@+id/navigationDrawerFeedback"
                android:icon="@drawable/icon_feedback"
                android:title="@string/feedback" />
        </menu>
    </item>
    <item android:title="">
        <menu>
            <item
                android:id="@+id/navigationDrawerLogout"
                android:icon="@drawable/icon_logout"
                android:title="@string/logout" />
        </menu>
    </item>
</menu>