<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="horizontal"
    android:layout_width="match_parent"
    android:layout_height="60dp"
    android:gravity="center_vertical"
    android:paddingVertical="8dp">

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:orientation="horizontal">

        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/civAvatarItemListConversation"
            android:layout_width="28.8dp"
            android:layout_height="28.8dp"
            android:layout_marginEnd="8dp"
            android:src="@drawable/default_avatar" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/tvUserNameItemListConversation"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/username"
                android:textColor="@color/gunmetal"
                android:textSize="14sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/tvLastMessageItemListConversation"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/lastMessage"
                android:textColor="@color/gunmetal"
                android:textSize="12sp" />
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center_vertical"
        android:orientation="horizontal">

        <ImageView
            android:layout_width="2dp"
            android:layout_height="2dp"
            android:layout_marginHorizontal="5dp"
            android:maxLines="1"
            android:src="@drawable/icon_point"
            android:textColor="@color/slateBlue"
            android:textSize="12sp" />

        <TextView
            android:id="@+id/tvTimeLastMessage"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="@string/time"
            android:maxLines="1"
            android:textColor="@color/gunmetal"
            android:textSize="12sp" />
    </LinearLayout>


</LinearLayout>