<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbarUpdateProfileActivity"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="@color/primary"
        android:theme="@style/AppTheme.Toolbar" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        >

        <ImageView
            android:id="@+id/ivUpdateBackground"
            android:layout_width="match_parent"
            android:layout_height="160dp"
            android:contentDescription="@string/background"
            android:scaleType="centerCrop"
            android:src="@drawable/default_background" />

        <ImageButton
            android:id="@+id/ibtnUpdateBackground"
            android:layout_width="28.8dp"
            android:layout_height="28.8dp"
            android:layout_alignParentTop="true"
            android:layout_alignParentEnd="true"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="16dp"
            android:layout_marginBottom="16dp"
            android:background="@drawable/background_image_button"
            android:clickable="true"
            android:contentDescription="@string/updateBackGround"
            android:src="@drawable/icon_camera" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_alignParentEnd="true"
            android:layout_marginTop="120dp"
            android:layout_marginBottom="27dp"
            android:orientation="vertical"
            android:paddingHorizontal="16dp"
            android:paddingTop="8dp"
            android:paddingBottom="16dp">

            <de.hdodenhof.circleimageview.CircleImageView
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:layout_centerHorizontal="true"
                android:src="@color/white" />

            <de.hdodenhof.circleimageview.CircleImageView
                android:id="@+id/civUpdateAvatarProfile"
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:layout_centerHorizontal="true"
                android:padding="4dp"
                android:src="@drawable/default_avatar" />

            <ImageButton
                android:id="@+id/ibtnUpdateAvatar"
                android:layout_width="28.8dp"
                android:layout_height="28.8dp"
                android:layout_alignEnd="@+id/civUpdateAvatarProfile"
                android:layout_alignBottom="@+id/civUpdateAvatarProfile"
                android:background="@drawable/background_image_button"
                android:clickable="true"
                android:contentDescription="@string/updateAvatar"
                android:src="@drawable/icon_camera" />
        </RelativeLayout>
    </RelativeLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="0.5dp"
        android:layout_marginHorizontal="8dp"
        android:background="@color/slateBlue" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="20dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="4dp"
                android:gravity="center_vertical"
                android:orientation="horizontal">

                <TextView

                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:maxLines="2"
                    android:text="@string/name"
                    android:textColor="@color/slateBlue"
                    android:textSize="15sp" />

                <ImageButton
                    android:id="@+id/ibtnUpdateName"
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:background="@drawable/background_edit"
                    android:clickable="true"
                    android:contentDescription="@string/updateName"
                    android:src="@drawable/icon_edit" />
            </LinearLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                >
                <TextView
                    android:id="@+id/tvUserNameUpdate"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/username"
                    android:textColor="@color/gunmetal"
                    android:textSize="14sp"
                    android:textStyle="bold" />
                <LinearLayout
                    android:id="@+id/linearLayoutUpdateMyName"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:visibility="gone"
                    android:orientation="horizontal">
                    <EditText
                        android:id="@+id/edtUpdateName"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:background="@drawable/frame_inputdata"
                        android:text="@string/username"
                        android:textColor="@color/gunmetal"
                        android:textSize="14sp"
                        android:textStyle="bold"
                        android:contentDescription="@string/username" />
                    <Button
                        android:id="@+id/btnSaveName"
                        android:layout_width="58dp"
                        android:layout_height="40.5dp"
                        android:background="@drawable/background_button"
                        android:textAllCaps="false"
                        android:textSize="15sp"
                        android:textColor="@color/white"
                        android:text="@string/save"/>
                </LinearLayout>
            </RelativeLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="4dp"
                android:gravity="center_vertical"
                android:maxLines="2"
                android:text="@string/email"
                android:textColor="@color/slateBlue"
                android:textSize="15sp" />

            <TextView
                android:id="@+id/tvUpdateEmail"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:text="@string/email"
                android:textColor="@color/gunmetal"
                android:textSize="14sp"
                android:textStyle="bold" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="4dp"
                android:gravity="center_vertical"
                android:maxLines="2"
                android:text="@string/country"
                android:textColor="@color/slateBlue"
                android:textSize="15sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:text="@string/vietNam"
                android:textColor="@color/gunmetal"
                android:textSize="14sp"
                android:textStyle="bold" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="4dp"
                android:gravity="center_vertical"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:maxLines="2"
                    android:text="@string/status"
                    android:textColor="@color/slateBlue"
                    android:textSize="15sp" />

                <ImageButton
                    android:id="@+id/ibtnUpdateStatus"
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:background="@drawable/background_edit"
                    android:clickable="true"
                    android:contentDescription="@string/updateName"
                    android:src="@drawable/icon_edit" />
            </LinearLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp">
                <TextView
                    android:id="@+id/tvStatusUpdate"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/status"
                    android:maxWidth="340dp"
                    android:textColor="@color/gunmetal"
                    android:textSize="14sp"
                    android:textStyle="bold" />
                <LinearLayout
                    android:id="@+id/linearLayoutUpdateMySatus"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:visibility="gone"
                    android:orientation="horizontal">
                    <EditText
                        android:id="@+id/edtUpdateMyStatus"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:background="@drawable/frame_inputdata"
                        android:text="@string/status"
                        android:textColor="@color/gunmetal"
                        android:textSize="14sp"
                        android:textStyle="bold"
                        android:maxLines="1"
                        android:maxLength="500"
                        android:contentDescription="@string/status" />
                    <Button
                        android:id="@+id/btnSaveStatus"
                        android:layout_width="58dp"
                        android:layout_height="40.5dp"
                        android:background="@drawable/background_button"
                        android:textAllCaps="false"
                        android:textSize="15sp"
                        android:textColor="@color/white"
                        android:text="@string/save"/>
                </LinearLayout>
            </RelativeLayout>
        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="0.5dp"
            android:layout_marginHorizontal="8dp"
            android:background="@color/slateBlue" />
    </LinearLayout>
</LinearLayout>